# matrix4-light_organ

./: CMakeLists.txt  alsa_sampler.hpp  color.hpp  hanning.hpp  main.cpp  masks.hpp  matrix4_display.h  matrix_animation.hpp  matrix_animation_test.cpp  matrix_light_organ.kdev4  normalizer.hpp
.kdev4/: matrix_light_organ.kdev4
